# gamify_old

./: .clang-format  .gitmodules  CMakeLists.txt  default.frag  default.vert  gizmos.frag  lighting.frag  projection.vert
shaders/: gizmo.frag  gizmo.vert
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  resources.qrc
src/common/: CMakeLists.txt  color.hpp  concepts.hpp  empty_profiler.cpp  file_utils.hpp  floating_point_arithmetics.hpp  logger.cpp  logger.hpp  macros.hpp  matrix.hpp  profiler.hpp  quaternion.hpp  types.hpp  uuid.hpp  vector.hpp
src/core/: CMakeLists.txt  pointer_traits.hpp
src/engine/: CMakeLists.txt  clock.cpp  clock.hpp  engine.cpp  engine.hpp  prototypes.hpp
src/project/: CMakeLists.txt  asset.cpp  asset.hpp  asset_manager.cpp  asset_manager.hpp  behavior.cpp  behavior.hpp  behavior_registry.cpp  behavior_registry.hpp  camera_component.cpp  camera_component.hpp  component.cpp  component.hpp  concepts.hpp  game_object.cpp  game_object.hpp  material.cpp  material.hpp  mesh_component.cpp  mesh_component.hpp  object.cpp  object.hpp  project.cpp  project.hpp  prototypes.hpp  renderer_component.cpp  renderer_component.hpp  resource.cpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp  transform_component.cpp  transform_component.hpp
src/project/assets/: material_asset.cpp  material_asset.hpp  mesh_asset.cpp  mesh_asset.hpp  shader_asset.cpp  shader_asset.hpp  texture_asset.cpp  texture_asset.hpp
src/rendering/: CMakeLists.txt  gizmo_renderer.hpp  renderer.cpp  renderer.hpp
src/sample_game/: CMakeLists.txt  logger.hpp  print_behavior.cpp  print_behavior.hpp
src/stdafx/: CMakeLists.txt  stdafx  stdafx.cpp  stdafx_qt  stdafx_qt.cpp
src/ui/: CMakeLists.txt  asset.cpp  asset.hpp  asset_manager.cpp  asset_manager.hpp  main_window.cpp  main_window.hpp  properties_panel.cpp  properties_panel.hpp  scene_model.cpp  scene_model.hpp  scene_view.cpp  scene_view.hpp
src/view/: CMakeLists.txt  main_window.cpp  main_window.hpp  project_widget.cpp  project_widget.hpp  scene_model.cpp  scene_model.hpp  scene_view.cpp  scene_view.hpp
src/view/logging/: logger.cpp  logger.hpp  logger_model.cpp  logger_model.hpp  qt_logger_sink.hpp
src/viewport/: CMakeLists.txt  camera_view.cpp  camera_view.hpp  viewport.cpp  viewport.hpp
test/unit/: CMakeLists.txt  main.cpp  object.cpp  test_matrix.cpp  test_vector.cpp
